--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
     "files.associations": {
         "*.ejs": "html",
         "iostream": "cpp"
+    },
+    "console-ninja.toolsToEnableSupportAutomaticallyFor": {
+        "live-server-extension": true
     }
 }
